--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body, html
 {
-  margin: 0px;
+  margin: 10px;
   height: 100%;
   width: 100%;
 }
@@ -14,7 +14,8 @@ body
 {
   background-image: url(https://cdn.pixabay.com/photo/2014/01/31/18/01/watercolour-255615_1280.jpg);
   background-size: cover;
-  background-position: center; 
+  background-position: center;
+  background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,7 +49,6 @@ button
 {
   display: flex;
   flex-direction: row;
-  margin: auto;
 }
 #colorPicker
 {
@@ -89,4 +89,17 @@ button
   display: grid;
   width: 80vh;
   height: 80vh;
+}
+
+@media only screen and (max-width: 700px) {
+  #bodyContent
+  {
+    flex-direction: column;
+
+  }
+  #container
+  {
+    width: 80vw;
+    height: 80vw;
+  }
 }
